# pygohome

./: .flake8  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.rst  mypy.ini  noxfile.py  pygohome.ipynb  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml
notebooks/: pygohome.ipynb
src/pygohome/: __init__.py  convert.py  jupygohome.py  processor.py  world.py
tests/: test_convert.py  test_processor.py  test_world.py
tests/testdata/: osmand_1seg_1pt.gpx  osmand_1seg_2pt.gpx  osmand_2waypoints.gpx  osmand_bad_hdop.gpx  osmand_invalid.gpx  osmand_nopoints.gpx
