[tool.poetry]
name = "pygohome"
version = "20.5.0"
description = "A 100% personal route optimizer in a known environment based on experience."
authors = ["Miroslav Šedivý <eumiro@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/eumiro/pygohome"
repository = "https://github.com/eumiro/pygohome"
keywords = ["pygohome"]

[tool.poetry.dependencies]
python = "^3.7"
gpxpy = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.8.1"
flake8 = "^3.8.1"
black = "^19.10b0"
flake8-bandit = "^2.1.2"
flake8-black = "^0.1.2"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
pytest-mock = "^3.1.0"
mypy = "^0.770"
flake8-annotations = "^2.1.0"
flake8-docstrings = "^1.5.0"
darglint = "^1.3.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pygohome"]

[tool.coverage.report]
show_missing = true
fail_under = 100
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
